Smart contract invocation (#12)
* Smart contract invocation

* Update: package.json files
